update locales files

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -9,5 +9,40 @@
         "Resources": "المقالات و الموارد",
         "Ethics": "المعايير الاخلاقية",
         "Contact": "تواصل معنا"
+    },
+    "home":{
+        "hero":{
+            "heading":"خلّي يومك أسهل مع TransGate",
+            "para":"في Trans Gate بنقدّم ترجمة أكاديمية دقيقة واحترافية لرسائل الماجستير والدكتوراه والأبحاث العلمية.",
+            "startBtn":"ابدأ الآن"
+        },
+        "about":{
+
+        },
+        "accuracy":{
+            "heading":"هل تم رفض مستنداتك من قبل بسبب ترجمة غير صحيحة؟",
+            "para":"الترجمة مش مجرد تحويل كلمات، دي نقل دقيق للمعنى والسياق والغرض. عشان كده إحنا بنقدملك ترجمة دقيقة وعالية الجودة على يد خبراء لغويين معتمدين.",
+            "card1":{
+                "heading":"ترجمة خالية من الأخطاء",
+                "para":"بتقضي على أي أخطاء ممكن تأخر تقدمك الأكاديمي أو المهني أو تضر بيه."
+            },
+            "card2":{
+                "heading":"خبراء لغويين",
+                "para":"مستنداتك بيشتغل عليها متخصصين عندهم إلمام قوي باللغة والسياق."
+            },
+            "card3":{
+                "heading":"نقل دقيق للمعنى",
+                "para":"بنضمن إن كل فكرة توصل بوضوح ودقة."
+            }
+        },
+        "professionalism":{
+
+        },
+        "testmonial":{
+
+        },
+        "services":{
+
+        }
     }
 }
