feat: add utility function to construct partner logo URLs

--- a/src/i18n/locales/ar/translation.json
+++ b/src/i18n/locales/ar/translation.json
@@ -149,24 +149,66 @@
       "highlight": "يتحمّل العملاء المسؤولية الكاملة عن أعمالهم الأكاديمية والمهنية، وعن الالتزام بالقوانين وسياسات المؤسسات ومتطلبات النزاهة الأكاديمية ذات الصلة."
     }
   },
-  "accuracy": {
-  "title": "الدقة والاحترافية",
-  "description": "في ترانس جيت نضمن تقديم ترجمة بأعلى مستوى من الدقة والجودة والاحترافية من خلال مراجعات دقيقة ومترجمين متخصصين.",
-  "cards": {
-    "card1": {
-      "title": "جودة معتمدة",
-      "text": "نقدم ترجمة معتمدة ومقبولة لدى السفارات والجامعات والمؤسسات الرسمية."
-    },
-    "card2": {
-      "title": "مترجمون متخصصون",
-      "text": "يضم فريقنا مترجمين متخصصين في المجالات القانونية والأكاديمية والطبية لضمان أعلى درجات الدقة."
-    },
-    "card3": {
-      "title": "تسليم سريع وموثوق",
-      "text": "نضمن تسليم ترجمة دقيقة في الوقت المحدد مع تنسيق احترافي وثبات في الجودة."
+  "coreValues": {
+    "title": "القيم الأساسية لترانس جيت",
+    "items": {
+      "accuracy": {
+        "title": "الدقة",
+        "desc": "نضمن أن تصل أفكارك بوضوح ودقة في كل ترجمة."
+      },
+      "academic": {
+        "title": "التميز الأكاديمي",
+        "desc": "ندعم البحث والتعلّم بتقديم إرشادات متخصصة تعزّز البناء والوضوح والأثر."
+      },
+      "integrity": {
+        "title": "النزاهة",
+        "desc": "نلتزم بالشفافية والصدق مع احترام السرية والمعايير الأخلاقية."
+      },
+      "professional": {
+        "title": "الاحترافية",
+        "desc": "نعمل على تنفيذ كل مشروع بمهنية، واعتمادية، واهتمام دقيق بالتفاصيل."
+      },
+      "growth": {
+        "title": "التطور المستمر",
+        "desc": "نتبنّى التعلم المستمر ونواكب أحدث المستجدات في اللغة والمعايير الأكاديمية واتجاهات البحث."
+      },
+      "clarity": {
+        "title": "الوضوح",
+        "desc": "نحوّل الأفكار المعقدة إلى رسائل واضحة ومفهومة وذات معنى لجمهورك."
+      },
+      "collaboration": {
+        "title": "التعاون والدعم",
+        "desc": "نقدّم التوجيه والملاحظات والحلول الشخصية من خلال تعاون مباشر مع العملاء."
+      },
+      "communication": {
+        "title": "التميز في التواصل",
+        "desc": "نحرص على أن تكون كل رسالة واضحة، مختصرة، وفعّالة في كل مشروع، سواء كان مكتوبًا أو استشاريًا."
+      },
+      "inspiration": {
+        "title": "الإلهام والتحفيز",
+        "desc": "نشجّع عملاءنا على التعلّم والتطور والوصول إلى مستويات أعلى من الإنجاز والمعرفة."
+      }
     }
+  },
+  "accuracy": {
+    "title": "الدقة والاعتمادية",
+    "description": "نقدّم نتائج عالية الدقة مدعومة بتقنيات متقدمة لضمان أداء ثابت ومخرجات موثوقة يمكنك الاعتماد عليها.",
+"cards": {
+  "card1": {
+    "title": "ترجمة دقيقة وخالية من الأخطاء",
+    "text": "نضمن تقديم ترجمات دقيقة، خالية من أي أخطاء، لتجنب أي تأخير أو عوائق في مسيرتك الأكاديمية والمهنية."
+  },
+  "card2": {
+    "title": "خبراء لغويون متخصصون",
+    "text": "يتم التعامل مع ملفاتك من قبل فريق من المتخصصين يمتلكون معرفة لغوية عميقة وفهماً للسياق."
+  },
+  "card3": {
+    "title": "دعم شامل للبحث الأكاديمي",
+    "text": "نوفر الإرشاد والدعم لتعزيز جودة وتأثير أبحاثك، بدءاً من هيكلة رسالتك أو أطروحتك وصولاً إلى تنقيح حججك ومنهجيتك، نساعدك على ضمان أن عملك يفي بأعلى المعايير الأكاديمية. يتيح لك دعمنا تقديم أفكارك بوضوح ودقة وثقة."
   }
-},
+}
+
+  },
 "languages": {
   "arabic": "العربية",
   "english": "الإنجليزية",
@@ -240,7 +282,7 @@
       "partnerships": "شراكات",
       "experience": "سنوات الخبرة"
     },
-    "description": "تقدم ترانس جيت خدمات ترجمة احترافية ودقيقة للأعمال الأكاديمية والعلمية، إلى جانب استشارات متخصصة تهدف إلى تحسين جودة الأبحاث وتعزيز أثرها. نخدم عملاء في أكثر من 35 دولة، ونمكّن الباحثين حول العالم من إيصال أفكارهم بوضوح ودقة وثقة.",
+    "description": "في TransGate، نحن ملتزمون بالدقة والإرشاد على حد سواء. تقدم خدماتنا للترجمة ترجمات دقيقة ومهنية للأطروحات والرسائل الجامعية والأبحاث العلمية، مما يضمن توصيل أفكارك بوضوح وفعالية. توفر استشاراتنا الأكاديمية دعماً متخصصاً لتعزيز جودة البحث، وهيكليته، وتأثيره الأكاديمي العام، مما يساعدك على تحقيق كامل إمكانياتك. نحن نتمسك بأعلى معايير المهنية والجودة، ونخدم عملاء في أكثر من 35 دولة، بما في ذلك مصر، المملكة العربية السعودية، الإمارات العربية المتحدة، الكويت، قطر، عمان، وأكثر. ومع انتشارنا العالمي، نُمكّن العلماء والباحثين حول العالم من نقل أفكارهم بوضوح ودقة وتأثير.",
     "cta": "ابدأ الآن"
   },
 
@@ -448,5 +490,79 @@
       "relatedLoading": "جاري تحميل المقالات ذات الصلة...",
       "noRelated": "لا توجد مقالات ذات صلة."
     }
+  },
+
+  "values": {
+    "title": "قيمنا",
+    "cards": {
+      "professionalism": {
+        "title": "الاحترافية",
+        "desc": "مبدأ أساسي يوجّه طريقتنا في تنفيذ كل مشروع باحتراف ودقة.",
+        "more": "اضغط للمزيد"
+      },
+      "integrity": {
+        "title": "النزاهة",
+        "desc": "نلتزم بالشفافية والصدق في جميع تعاملاتنا وأعمالنا.",
+        "more": "اضغط للمزيد"
+      },
+      "academic": {
+        "title": "التميز الأكاديمي",
+        "desc": "ندعم البحث والتعلّم من خلال تقديم إرشادات متخصصة تعزّز البنية والوضوح والأثر.",
+        "more": "اضغط للمزيد"
+      },
+      "accuracy": {
+        "title": "الدقة",
+        "desc": "نضمن نتائج دقيقة من خلال مراجعة دقيقة ومعايير جودة عالية.",
+        "more": "اضغط للمزيد"
+      },
+      "communication": {
+        "title": "التميز في التواصل",
+        "desc": "نتواصل بوضوح واحتراف لضمان تعاون سلس ومثمر.",
+        "more": "اضغط للمزيد"
+      },
+      "collaboration": {
+        "title": "تعاون داعم",
+        "desc": "نعمل جنبًا إلى جنب مع عملائنا لتحقيق أفضل النتائج معًا.",
+        "more": "اضغط للمزيد"
+      },
+      "clarity": {
+        "title": "الوضوح",
+        "desc": "نقدّم محتوى واضحًا ومنظمًا وسهل الفهم لتحقيق أكبر تأثير.",
+        "more": "اضغط للمزيد"
+      },
+      "growth": {
+        "title": "نمو مستمر",
+        "desc": "نطوّر مهاراتنا وعملياتنا باستمرار لتقديم أعلى قيمة.",
+        "more": "اضغط للمزيد"
+      },
+      "back": "اضغط للعودة"
+    }
+  },
+  "freeTrans": {
+    "btn": "تحقق من بحثك مجانًا",
+    "title": "ارفع بحثك",
+    "subtitle": "املأ بياناتك وارفع ملف PDF وسنقوم بمراجعته يدويًا.",
+    "form": {
+      "name": "الاسم بالكامل",
+      "email": "البريد الإلكتروني",
+      "mobile": "رقم الهاتف",
+      "file": "رفع البحث (PDF)",
+      "namePlaceholder": "اكتب اسمك بالكامل",
+      "emailPlaceholder": "اكتب بريدك الإلكتروني",
+      "mobilePlaceholder": "اكتب رقم هاتفك",
+      "submit": "إرسال",
+      "sending": "جارٍ الإرسال...",
+      "close": "إغلاق",
+      "success": "تم الإرسال بنجاح! سيتم التواصل معك قريبًا.",
+      "fail": "حدث خطأ، حاول مرة أخرى.",
+      "errors": {
+        "name": "الاسم مطلوب",
+        "email": "البريد الإلكتروني مطلوب",
+        "emailInvalid": "اكتب بريدًا إلكترونيًا صحيحًا",
+        "mobile": "رقم الهاتف مطلوب",
+        "file": "من فضلك ارفع ملف PDF"
+      }
+    }
   }
+
 }
